[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name              = "py-comet"
version           = "1.0.0"
description       = "Drift correction for single molecule localization microscopy datasets"
readme            = "README.md"
license = { text = "MIT" }
requires-python   = ">=3.8"
authors           = [
  { name = "Lenny Reinkensmeier", email = "lenny.reinkensmeier@ifnano.de" },
  { name = "Mark Bates", email = "mark.bates@ifnano.de" }
]
dependencies = [
  "numpy>=1.24.0,<1.25",
  "scipy>=1.10.0,<1.11",
  "matplotlib>=3.1.0,<3.8",
  "pandas>=2.0.0",
  "h5py>=3.11.0,<3.12",
  "numba>=0.58.0,<0.59",
  "tqdm>=4.67.0,<5.0",
  "scikit-learn>=1.3.0,<1.4",
  "lmfit>=1.3.0,<1.4",
]

[project.urls]
Homepage    = "https://github.com/yourusername/comet-drift"
Repository  = "https://github.com/yourusername/comet-drift"

[tool.setuptools.packages.find]
where   = ["."]
include = ["comet*"]

[project.scripts]
comet = "comet.cli.cli_interface:main"
